--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "simple-queue-service": "~1.0.1",
     "browserify": "~2.4.3",
     "socket.io": "~0.9.13",
-    "request": "~2.14.0"
+    "request": "~2.14.0",
+    "throat": "0.0.0"
   }
 }
