--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "browserify": "~2.4.3",
     "socket.io": "~0.9.13",
     "request": "~2.14.0",
-    "throat": "0.0.0"
+    "throat": "0.0.0",
+    "guid": "0.0.10",
+    "mkdirp": "~0.3.5",
+    "knox": "~0.5.4"
   }
 }
